# powerManagement

./: .gitignore  README.md  crontab_schedule  mosCmd.sh  new.txt  txUps.sh
usingJSON/: .gitignore  CMakeLists.txt  buildDebug.sh  buildEclipse.sh  buildRelease.sh  getMonit.py  getMonit1.py  install-deb-amd86.sh  install-deb-arm64.sh  install-deb-armv7l.sh  installMonit.sh  localRelease.sh  mkControl.sh  mysqlSetup.sql  publish.py  slides.py  syncMQTT.py  template.py  timeSwitch.py  tstData.sql
usingJSON/Adaptors/: README
usingJSON/Adaptors/sr201/: sr201relay.py
usingJSON/Clients/Forth/: socket_client.fth
usingJSON/Clients/Python/: plcClient.py
usingJSON/Clients/Shell/: pushBullet.sh
usingJSON/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
usingJSON/Debug/src/: Makefile  Server  cmake_install.cmake
usingJSON/Doc/: Notes.txt  overview.txt  overview_new.txt  snmp.txt  times.txt
usingJSON/JSON/: README  ap_example.json  bridge.json  bridge_dev.json  bridge_example.json  bridge_home.json  bridge_local.json  bridge_localdb.json  bridge_office.json  bridge_rpi3.json  toAp.py
usingJSON/Monit/: README  Server.monitrc  backLights.monitrc  dispatch.monitrc  monitrc  mqtt.monitrc  porchLight.monitrc  snmp.monitrc  syncMQTT.monitrc
usingJSON/Python/: GUI.py  addIO.py  desktopNotify.py  getMonit1.py  getMonit2.py  getPower.py  logger.py  notify.py  pbNotify.py  plcClient.py  pubOnTime.py  publish.py  rmIO.py  setPower.py  snmp.py  subAndNotify.py  subWait.py  syncMQTT.py  template.py  timeSwitch.py  togglePower.py
usingJSON/SQL/: mysqlSetup.sql  setup.sh  tstData.sql
usingJSON/Scripts/: Server.sh  alarm.sh  backLights.sh  backupData.sh  check.sh  cronPorchLight.sh  dispatch.sh  dumpDb.sh  fan.sh  mqtt.sh  porchLight.sh  powerCron.txt  pubDay.sh  setup.sh  snmp.sh  switchConfig.sh  syncMQTT.sh  syncMQTT_bin.sh  template.sh
usingJSON/Server2/: CMakeLists.txt  Makefile  Server2.cpp  incCounter.h  interp.cpp  interp.h  interpTest  interpTest.cpp
usingJSON/Server3/: CMakeLists.txt  Server3.cpp  Server3.h  cache.txt  haRest.cpp  haRest.h  haTest.cpp  redis-cli.txt
usingJSON/apcupsd/: apccontrol  apctest.output  apcupsd.conf  commfailure  doshutdown  mainsback  offbattery  onbattery  pubStatus.sh  pubStuff.sh  runlimit
usingJSON/commonClasses/: CMakeLists.txt  Doxyfile  alarmBase.cpp  alarmBase.h  edge.cpp  edge.h  incCounter.cpp  plcBase.cpp  plcBase.h  plcSocket.cpp  plcSocket.h  tQueue.cpp  tQueue.h  timerBase.cpp  timerBase.h  timerTest.cpp  toggle.cpp  toggle.h  tstAlarm.cpp  tstEdge.cpp  tstIncCounter.cpp  tstPLC.cpp  tstPlc.cpp  tstQ.cpp  tstTimer.cpp  tstToggle.cpp  utils.cpp  utils.h
usingJSON/commonClasses/html/: CMakeLists_8txt.html  alarmBase_8cpp.html  alarmBase_8cpp__incl.map  alarmBase_8cpp__incl.md5  alarmBase_8cpp_source.html  alarmBase_8h.html  alarmBase_8h__dep__incl.map  alarmBase_8h__dep__incl.md5  alarmBase_8h__incl.map  alarmBase_8h__incl.md5  alarmBase_8h_source.html  annotated.html  classalarmBase-members.html  classalarmBase.html  classalarmBase_a00594286f53c44557bac76e9417cab98_icgraph.map  classalarmBase_a00594286f53c44557bac76e9417cab98_icgraph.md5  classalarmBase_a016581d1482af2fa51b717ec5da7b968_icgraph.map  classalarmBase_a016581d1482af2fa51b717ec5da7b968_icgraph.md5  classalarmBase_a0e4641dd0d32a4741cf1152efb4ee0da_icgraph.map  classalarmBase_a0e4641dd0d32a4741cf1152efb4ee0da_icgraph.md5  classalarmBase_a9e4c714a5ac6ef1ddeb48f210518d9de_icgraph.map  classalarmBase_a9e4c714a5ac6ef1ddeb48f210518d9de_icgraph.md5  classalarmBase_ab4108e3a49cd9903b0061982b8374fa8_icgraph.map  classalarmBase_ab4108e3a49cd9903b0061982b8374fa8_icgraph.md5  classalarmBase_afa74814e3158ea44dba4df34ad59fb15_icgraph.map  classalarmBase_afa74814e3158ea44dba4df34ad59fb15_icgraph.md5  classedge-members.html  classedge.html  classedge_a6065ad159d787bdd3b439f1834e64cb4_icgraph.map  classedge_a6065ad159d787bdd3b439f1834e64cb4_icgraph.md5  classedge_a66ef9c6a7dae5e62f23f941b3eaede9a_icgraph.map  classedge_a66ef9c6a7dae5e62f23f941b3eaede9a_icgraph.md5  classedge_af5acb6c4388186172587fe94652f6faf_cgraph.map  classedge_af5acb6c4388186172587fe94652f6faf_cgraph.md5  classedge_af5acb6c4388186172587fe94652f6faf_icgraph.map  classedge_af5acb6c4388186172587fe94652f6faf_icgraph.md5  classes.html  classincCounter-members.html  classincCounter.html  classincCounter__coll__graph.map  (+225 more)
usingJSON/commonClasses/latex/: CMakeLists_8txt.tex  alarmBase_8cpp.tex  alarmBase_8cpp__incl.md5  alarmBase_8h.tex  alarmBase_8h__dep__incl.md5  alarmBase_8h__incl.md5  annotated.tex  classalarmBase.tex  classalarmBase_a00594286f53c44557bac76e9417cab98_icgraph.md5  classalarmBase_a016581d1482af2fa51b717ec5da7b968_icgraph.md5  classalarmBase_a0e4641dd0d32a4741cf1152efb4ee0da_icgraph.md5  classalarmBase_a9e4c714a5ac6ef1ddeb48f210518d9de_icgraph.md5  classalarmBase_ab4108e3a49cd9903b0061982b8374fa8_icgraph.md5  classalarmBase_afa74814e3158ea44dba4df34ad59fb15_icgraph.md5  classedge.tex  classedge_a6065ad159d787bdd3b439f1834e64cb4_icgraph.md5  classedge_a66ef9c6a7dae5e62f23f941b3eaede9a_icgraph.md5  classedge_af5acb6c4388186172587fe94652f6faf_cgraph.md5  classedge_af5acb6c4388186172587fe94652f6faf_icgraph.md5  classincCounter.tex  classincCounter__coll__graph.md5  classincCounter_a0245293040a518c76b530bee43024808_icgraph.md5  classincCounter_a3830decd76aec512769ec4197b9dca53_icgraph.md5  classincCounter_aa9e488493bfea49c3a853e9a54e16d26_icgraph.md5  classmsTimer.tex  classmsTimer_a33be4e4b7fcd73a8821f67405f1ff12a_icgraph.md5  classmsTimer_a3d0fb74b706566a8537a4f13103817ac_icgraph.md5  classmsTimer_aa4df4c89ee5df5c3b687bc213bfbf4c6_icgraph.md5  classmsTimer_ae5f4a158bb45c309ff52e59aefbf5e6b_cgraph.md5  classmsTimer_ae5f4a158bb45c309ff52e59aefbf5e6b_icgraph.md5  classplcBase.tex  classplcBase__coll__graph.md5  classplcBase__inherit__graph.md5  classplcSocket.tex  (+88 more)
usingJSON/src/: CMDS.txt  CMakeLists.txt  Server.cpp  Server_1.cpp  backLights.cpp  dispatch.cpp  lights.cpp  lights_1.cpp  notify.cpp  plc.cpp  porchLights.cpp  pubSunRiset.c  pubSunRiset.cpp  syncMQTT.cpp  tDispatch.cpp  tstSQL.cpp
(+347 files in other folders)
